# eyeCATCHER

./: blur.html  index.html  package-lock.json  package.json  supabase-fix-rls.sql  supabase-migration.sql  supabase-mvp-schema-fix.sql  supabase-username-login.sql  vite.config.ts
src/: blur.ts  main.ts  styles.css  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
