[package]
name = "eyecatcher"
version = "0.1.0"
description = "eyeCATCHER - a persistent 20-20-20 eye tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "eyecatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
active-win-pos-rs = "0.8"
user-idle = "0.6"
window-vibrancy = "0.5"
